syntax = "proto3";

package client;

// 1-99 底层占用
// 100-19999是内部服务器消息
// 20000-49999客户端
// 50000-65535留给gm和其他节点使用
enum OPCODE {
  //内置消息开始号
  EMPTY = 0;
  BEGIN = 20000;
  // Client发送到Server的Ping包
  C2S_PING = 20001;
  // Server发送回客户端的Ping
  S2C_PING = 20002;
  TEST1 = 20003;
  TEST2 = 20004;
  TEST3 = 20005;
  //内置消息结束号
  END = 49999;
}